# OT-SB

./: MANIFEST.in  PYTORCH_INSTALL.md  QUICKSTART.md  README.md  pyproject.toml  requirements_torch.txt
docs/: getting_started.md
examples/: README.md  comparison_methods.py  example_exact_ot.py  example_schrodinger_bridge.py  example_sinkhorn.py  gaussian_mixture_transport.py  run_all_examples.py  simple_1d_ot.py
examples_torch/: README.md  example_schrodinger_bridge_torch.py  example_sinkhorn_torch.py  gpu_benchmark.py  test_torch_installation.py
otsb/: __init__.py
otsb/core/: __init__.py  exact_ot.py  sinkhorn.py
otsb/solvers/: __init__.py  schrodinger_bridge.py
otsb/utils/: __init__.py  distances.py  visualization.py
otsb_torch/: __init__.py
otsb_torch/core/: __init__.py  exact_ot_torch.py  sinkhorn_torch.py
otsb_torch/solvers/: __init__.py  schrodinger_bridge_torch.py
otsb_torch/utils/: __init__.py  distances_torch.py
tests/: __init__.py  test_exact_ot.py  test_schrodinger_bridge.py  test_sinkhorn.py
